discussion/kv_engine/133356/133356_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Log throughput for DCP connections at shutdown time

Change-Id: Ia2cd48180146c05b64fdeecb3687274da5771246

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-07-28 09:56:34.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-28 10:09:45.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25345/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/connection.cc:1077:24:
error: use of undeclared identifier "calculateThroughput"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25345/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3517/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:1077:24: error: use of undeclared identifier "calculateThroughput" [clang-diagnostic-error]
        data["send"] = calculateThroughput(totalSend, duration.count());
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:1078:24: error: use of undeclared identifier "calculateThroughput" [clang-diagnostic-error]
        data["recv"] = calculateThroughput(totalRecv, duration.count());
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3517/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:1077:24:
error: use of undeclared identifier "calculateThroughput" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3517/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29310/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29310/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3907/ : FAILURE

Compile error at [2020-07-28T09:59:05.244Z] ../kv_engine/daemon/connection.cc:1077:24:
error: use of undeclared identifier "calculateThroughput"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3907/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4800/ : FAILURE

Compile error at [2020-07-28T09:57:45.615Z] ../kv_engine/daemon/connection.cc:1077:24:
error: ?calculateThroughput? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4800/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4983/ : FAILURE

Compile error at [2020-07-28T10:01:51.664Z] ../kv_engine/daemon/connection.cc:1077:24:
error: ?calculateThroughput? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4983/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12698/ : FAILURE

Compile error at [2020-07-28T10:05:47.584Z] ../kv_engine/daemon/connection.cc:1077:24:
error: ?calculateThroughput? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12698/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4879/ : FAILURE

Compile error at [2020-07-28T09:57:41.241Z] ../kv_engine/daemon/connection.cc:1077:24:
error: ?calculateThroughput? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4879/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2031/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
